--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,16 @@
 .navBox {
   display: flex;
+}
+
+.logoBox {
+  display: flex;
   align-items: center;
+  margin-right:  20px;
 }
 
 .buttonsBox {
   display: flex;
+  align-items: center;
 }
 
 .logoText {
